Improve reading order of exported resume PDFs Apply some hackery in HTML and CSS such that Chrome outputs a PDF with bullets points, dashes, and section headers in a logical order when the PDF is exported to a TXT. Hopefully enhances readability for Applicant Tracking Systems. Fix the layout compression of mobile resume printouts.

--- a/resume.css
+++ b/resume.css
@@ -107,6 +107,10 @@
 	vertical-align: top;
 }
 
+.section h2 {
+	position: relative;
+}
+
 .section .entry {
 	margin-bottom: 1pt;
 	position: relative;
